Edit Menu Nav Bar

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
-            android:text="Jadwal"
+            android:text="Muhamad Arwin Wijaya"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
     />
 
