--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="41dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="41dp" app:backgroundTint="@color/Linen"/>
+            android:layout_marginBottom="41dp"
+            app:backgroundTint="@color/Linen"/>
 
 </android.support.v4.widget.DrawerLayout>
