--- a/app/src/main/res/layout/content_menu_nav.xml
+++ b/app/src/main/res/layout/content_menu_nav.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,7 +9,9 @@
         tools:showIn="@layout/app_bar_menu_nav"
         tools:context=".MenuNavActivity">
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
-                 android:id="@+id/framelayout"/>
+    <FrameLayout android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:id="@+id/framelayout" android:layout_alignParentStart="true"
+                 android:layout_alignParentTop="true" android:layout_marginTop="0dp" android:layout_marginStart="0dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
