--- a/app/src/main/res/layout/activity_zdataruangan.xml
+++ b/app/src/main/res/layout/activity_zdataruangan.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".MenuNavActivity"
-        android:gravity="center"
->
+        tools:context=".zdataruangan"
+        android:gravity="center">
 
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:gravity="center"
-    >
+                  android:gravity="center">
         <EditText android:layout_width="300dp"
                   android:layout_height="wrap_content"
                   android:inputType="text"
                   android:hint="Nama Ruangan"
-                  android:id="@+id/inputnamaruangan"
-        />
+                  android:id="@+id/inputnamaruangan"/>
 
         <EditText android:layout_width="300dp"
                   android:layout_height="wrap_content"
                   android:inputType="text"
                   android:hint="Gedung"
-                  android:id="@+id/inputgedung"
-        />
+                  android:id="@+id/inputgedung"/>
+
         <Button android:layout_width="250dp"
                 android:layout_height="60dp"
                 android:text="Save"
