--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,14 +9,46 @@
         android:background="@color/DarkOrange"
         tools:context=".SplashScreenActivity">
 
-    <ImageView
-            android:layout_width="160dp"
-            android:layout_height="60dp"
-            android:id="@+id/splashscreen"
-            android:src="@drawable/splashscreen"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-    />
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical">
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:id="@+id/splashscreen"
+                android:src="@drawable/splashscreen"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="250dp"
+        />
+        <TextView
+                android:text="ITime - Mahasiswa ITERA"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/itime"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:gravity="center"
 
+                />
+        <TextView
+                android:text="App Version"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/appversion"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:layout_marginTop="200dp"
+        />
+
+        <TextView
+                android:text="1.0.1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2"
+                android:textSize="20sp"
+                android:gravity="center"/>
+
+    </LinearLayout>
 </RelativeLayout>
