--- a/app/src/main/res/layout/activity_zdataruangan.xml
+++ b/app/src/main/res/layout/activity_zdataruangan.xml
@@ -5,13 +5,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".zdataruangan"
-        android:gravity="center">
+        tools:context=".MenuNavActivity">
 
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:gravity="center">
+                  android:gravity="center"
+                  android:layout_centerInParent="true">
         <EditText android:layout_width="300dp"
                   android:layout_height="wrap_content"
                   android:inputType="text"
