--- a/app/src/main/res/layout/content_menu_nav.xml
+++ b/app/src/main/res/layout/content_menu_nav.xml
@@ -11,7 +11,10 @@
 
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 android:id="@+id/framelayout" android:layout_alignParentStart="true"
-                 android:layout_alignParentTop="true" android:layout_marginTop="0dp" android:layout_marginStart="0dp"/>
+                 android:id="@+id/framelayout"
+                 android:layout_alignParentStart="true"
+                 android:layout_alignParentTop="true"
+                 android:layout_marginTop="0dp"
+                 android:layout_marginStart="0dp"/>
 
 </RelativeLayout>
