--- a/app/src/main/res/layout/edatadosen.xml
+++ b/app/src/main/res/layout/edatadosen.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-              android:text="Fifth Layout"
-              android:gravity="center"
-              android:textSize="30sp"
-              android:textColor="@color/Aquamarine"
-    />
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical"
+                  android:gravity="center"
+                  android:layout_centerInParent="true">
 
-</android.support.constraint.ConstraintLayout>
+        <EditText android:layout_width="300dp"
+                  android:layout_height="wrap_content"
+                  android:inputType="text"
+                  android:hint="Nama Dosen"
+                  android:id="@+id/inputnamadosen"/>
+
+        <EditText android:layout_width="300dp"
+                  android:layout_height="wrap_content"
+                  android:inputType="text"
+                  android:hint="Dosen"
+                  android:id="@+id/inputdosen"/>
+
+        <Button android:layout_width="250dp"
+                android:layout_height="60dp"
+                android:text="Save"
+                android:id="@+id/btnSavedatadosen"/>
+
+
+    </LinearLayout>
+
+
+</RelativeLayout>
