--- a/app/src/main/res/layout/activity_direction.xml
+++ b/app/src/main/res/layout/activity_direction.xml
@@ -1,26 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Direction">
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+          xmlns:map="http://schemas.android.com/apk/res-auto"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@+id/map"
+          tools:context=".maps.DirectionActivity"
+          android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
-    <android.support.v7.widget.Toolbar android:layout_width="match_parent"
-                                       android:layout_height="?attr/actionBarSize"
-                                       android:id="@+id/toolbardir"
-                                       android:background="?attr/colorPrimary"
-                                       app:layout_constraintLeft_toLeftOf="parent"
-                                       app:layout_constraintRight_toRightOf="parent"
-                                       app:layout_constraintTop_toTopOf="parent"/>
-
-    <fragment android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@+id/g_map"
-              android:name="com.google.android.gms.maps.SupportMapFragment"
-              app:layout_constraintLeft_toLeftOf="parent"
-              app:layout_constraintRight_toRightOf="parent"
-              app:layout_constraintTop_toTopOf="@id/toolbardir"/>
-
-</android.support.constraint.ConstraintLayout>
