--- a/app/src/main/res/layout/activity_menu_nav.xml
+++ b/app/src/main/res/layout/activity_menu_nav.xml
@@ -30,22 +30,23 @@
                   android:padding="10dp"
                   android:background="#fcfcfc"
                   android:gravity="center"
-                  android:id="@+id/ll">
+                  android:id="@+id/vert">
 
         <LinearLayout
                 android:clipToPadding="false"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content" android:id="@+id/hori1">
 
             <android.support.v7.widget.CardView
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
-                    android:id="@+id/bankcardId"
+                    android:id="@+id/cv1"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
                     android:layout_margin="10dp">
+
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -62,7 +63,7 @@
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:layout_marginTop="10dp"
-                            android:text="Banking"/>
+                            android:text="Lihat Jadwal"/>
                     <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -72,7 +73,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="Check your bank activities"
+                            android:text="Lihat Semua Jadwal"
                             android:padding="5dp"
                             android:textColor="@android:color/darker_gray"/>
 
@@ -82,10 +83,12 @@
             <android.support.v7.widget.CardView
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
+                    android:id="@+id/cv2"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
                     android:layout_margin="10dp">
-                    <LinearLayout
+
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
@@ -125,14 +128,14 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content" android:id="@+id/hori2">
 
             <android.support.v7.widget.CardView
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp" android:id="@+id/cv3">
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -171,7 +174,7 @@
                     android:clickable="true"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp" android:id="@+id/cv4">
 
                 <LinearLayout
                         android:layout_width="match_parent"
@@ -183,25 +186,25 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundyello"
                             android:padding="10dp"
-                            android:src="@drawable/ic_attach_file_black_24dp" />
+                            android:src="@drawable/ic_attach_file_black_24dp"/>
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="Links"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"/>
                     <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_margin="10dp"
-                            android:background="@color/AliceBlue" />
+                            android:background="@color/AliceBlue"/>
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="5dp"
                             android:text="Check your bank activities"
-                            android:textColor="@android:color/darker_gray" />
+                            android:textColor="@android:color/darker_gray"/>
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -213,14 +216,14 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content" android:id="@+id/hori3">
 
             <android.support.v7.widget.CardView
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:layout_width="340dp"
                     android:layout_height="150dp"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp" android:id="@+id/cv5">
 
                 <LinearLayout
                         android:layout_width="match_parent"
