--- a/app/src/main/res/layout/activity_menu_nav.xml
+++ b/app/src/main/res/layout/activity_menu_nav.xml
@@ -30,7 +30,9 @@
                   android:padding="10dp"
                   android:background="#fcfcfc"
                   android:gravity="center"
-                  android:id="@+id/vert">
+                  android:id="@+id/vert"
+                  android:layout_marginTop="60dp"
+    >
 
         <LinearLayout
                 android:clipToPadding="false"
