--- a/app/src/main/res/layout/activity_menu_nav.xml
+++ b/app/src/main/res/layout/activity_menu_nav.xml
@@ -9,8 +9,6 @@
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
-
-
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
@@ -18,8 +16,7 @@
                   android:background="#fcfcfc"
                   android:gravity="center"
                   android:id="@+id/vert"
-                  android:layout_marginTop="60dp"
-    >
+                  android:layout_marginTop="60dp">
 
         <LinearLayout
                 android:clipToPadding="false"
@@ -45,7 +42,7 @@
                             android:layout_width="64dp"
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundpurple"
-                            android:src="@drawable/ic_attach_money_black_24dp"
+                            android:src="@drawable/ic_apps_black_24dp"
                             android:padding="10dp"/>
                     <TextView
                             android:layout_width="wrap_content"
@@ -134,14 +131,14 @@
                             android:layout_width="64dp"
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundgreen"
-                            android:src="@drawable/ic_control_point_black_24dp"
+                            android:src="@drawable/ic_place_black_24dp"
                             android:padding="10dp"/>
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:layout_marginTop="10dp"
-                            android:text="Add"/>
+                            android:text="Lihat Lokasi"/>
                     <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
